# knight-rider

./: .gitignore  Cargo.toml  README.md  start.sh
rpi-config/: alsa-config.state  config.txt  install.sh  rc.local  start.sh  stop.sh
rpi-configs/: install.sh  rc.local
src/: gemma.rs  llama.rs  main.rs  speech_to_text.rs  system_audio.rs  text_to_speech.rs
