[package]
name = "knight-rider"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
ort = "=2.0.0-rc.10"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
ringbuf = "0.4.8"
rtaudio = { version = "0.3.5", default-features = false, features = [
    "alsa",
    "coreaudio",
    "wasapi",
] }
rubato = "0.16.2"
sherpa-rs = { git = "https://github.com/steckes/sherpa-rs", rev = "78e471c274f8c62f2f006f6bcb51cfedcb7a8d30" }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokenizers = "0.21.4"
tokio = { version = "1.0", features = ["full"] }
